kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lernprojekt-service
spec:
  type: NodePort
  selector:
    app: lernprojekt-app
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30080
